--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 2px;
   text-align: center;
 }
 
@@ -34,9 +34,39 @@
 }
 
 .card {
-  padding: 2em;
+  padding: 0px;
 }
 
 .read-the-docs {
   color: #888;
+}
+
+.header {
+  text-align: center;
+  background-color: chocolate;
+  margin-bottom: 10%;
+  width: 1120px;
+}
+.footer {
+  display: inline-flex;
+  margin-top: 10%;
+  background-color: chocolate;
+  width: 1120px;
+  align-content: center;
+  display: inline-block;
+}
+
+.dataFooter {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+.layout {
+  background-color: rgb(0, 0, 0);
+}
+.my-counter {
+  background-color: chocolate;
+  width: fit-content;
+  border-radius: 5px;
+  display: inline-block;
+  align-self: center;
 }
